--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">2019 - 2023</h6>
-                            <P><b>PhD in Nuclear Physics</b></P>
+                            <P><b>Doctorate's Degree in Nuclear Physics</b></P>
                             <P class="subtitle">A PhD in Nuclear Physics with a project in nuclear medicine, specifically focused on the dosimetry of alpha particle emitters, entails in-depth research into the precise measurement and calculation of radiation doses delivered by alpha-emitting radionuclides for medical applications. This research plays a crucial role in optimizing therapeutic radiation treatments for cancer and other diseases, enhancing the effectiveness of targeted alpha-particle therapies while minimizing potential harm to healthy tissues. </P>
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
