--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <P class="subtitle">A PhD in Nuclear Physics with a project in nuclear medicine, specifically focused on the dosimetry of alpha particle emitters, entails in-depth research into the precise measurement and calculation of radiation doses delivered by alpha-emitting radionuclides for medical applications. This research plays a crucial role in optimizing therapeutic radiation treatments for cancer and other diseases, enhancing the effectiveness of targeted alpha-particle therapies while minimizing potential harm to healthy tissues. </P>
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
-                            <P><b>Graduated Course in Artificial Intelligence and Machine Learning</b></P>
+                            <P><b>Specialization in Artificial Intelligence and Machine Learning</b></P>
                             <P class="subtitle">A graduate course with a focus on solving industrial sector problems equips students with specialized skills in applying AI and ML techniques to real-world industrial challenges. Through rigorous coursework and industry-specific case studies, students learn to develop innovative solutions that optimize manufacturing processes, enhance quality control, and drive operational efficiency.</P>
                             <hr>
                             <h6 class="title text-danger">2017 - 2019</h6>
