--- a/index.html
+++ b/index.html
@@ -568,9 +568,9 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Hub de Inteligência Artificial.</b></p>
+                        <p><b>Graduated Course in Artificial intelligence applied in Industry.</b></p>
                         
-                        <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector.</p>
+                        <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector in HUB of Artificial Intelligence at Senai- Londrina.</p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
