--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Graduated Course in Artificial intelligence applied in Industry.</b></p>
+                        <p><b>Physics Undergraduation at Universidade Estadual de Londrina.</b></p>
                         
                         <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector in HUB of Artificial Intelligence at Senai- Londrina.</p>
 
