--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
                         <p><b>Physics Undergraduation at Universidade Estadual de Londrina.</b></p>
                         
-                        <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector in HUB of Artificial Intelligence at Senai- Londrina.</p>
+                        <p>Certification of a Bachelor's DEgree in Physics applied in the industrial sector in HUB of Artificial Intelligence at Senai- Londrina.</p>
 
                         <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
