--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Physics Undergraduation at Universidade Estadual de Londrina.</b></p>
+                        <p><b>Physics Undergraduation Course at Universidade Estadual de Londrina.</b></p>
                         
                         <p>Certification of a Bachelor's Degree in Physics.</p>
 
