--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                         
                         <p>Certification of a Bachelor's Degree in Physics.</p>
 
-                        <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="#" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
