--- a/index.html
+++ b/index.html
@@ -590,9 +590,9 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Physics Undergraduation Course at Universidade Estadual de Londrina.</b></p>
+                        <p><b>Certification of a Bachelor's Degree in Physics.</b></p>
                         
-                        <p>Certification of a Bachelor's Degree in Physics.</p>
+                        <p>hysics Undergraduation Course at Universidade Estadual de Londrina..</p>
 
                         <a href="#" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
