--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                             <a href="#"><i class="ti-share"></i> 2</a>
                             <a href="#"><i class="ti-download"></i> 1</a>
                         </p>
-                        <p>Specialization in Artificial intelligence applied to Industry</p>
+                        <p>Certification in Artificial intelligence applied to Industry</p>
 
                         <p><b>Graduated Course in Artificial intelligence applied in Industry.</b></p>
                         
