--- a/index.html
+++ b/index.html
@@ -566,13 +566,13 @@
                             <a href="#"><i class="ti-share"></i> 2</a>
                             <a href="#"><i class="ti-download"></i> 1</a>
                         </p>
-                        <p>Certification in Artificial intelligence applied to Industry</p>
+                        <p>Certification in Artificial Intelligence applied to Industry</p>
 
-                        <p><b>Graduated Course in Artificial intelligence applied in Industry.</b></p>
+                        <p><b>Graduated Course in Artificial Intelligence applied in Industry.</b></p>
                         
                         <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector in HUB of Artificial Intelligence at Senai- Londrina.</p>
 
-                        <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://www.senaipr.org.br/tecnologiaeinovacao/nossarede/hubia/" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
