--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                         
                         <p>Summary</p>
 
-                        <p><b>Research paper</b></p>
+                        <p><b>Abstract</b></p>
                         <p>223Radium dichloride image-based individual dosimetry requires an optimal acquisition and reconstruction protocol and proper image correction methods for theranostic applications. To assess this problem, radium-223 dichloride SPECT images were acquired from a Jaszczak simulator with a dual-headed gamma camera, LEHR collimator, 128 × 128 matrix, and total time of 32 minutes. A cylindrical PMMA phantom was used to calibrate the measurements performed with Jaszczak. The image quality parameters (noise coefficient, contrast, contrast-to-noise ratio and recovery coefficient) and septal penetration correction were calculated by MATLAB®. The best results for the investigated image quality parameters were obtained with an 89 keV energy window (24% wide) produced together with OSEM/MLEM reconstruction (8 subsets and 4 iterations) applying a Butterworth filter (order 10 and cutoff frequency of 0.48 cycles·cm−1).</p>
 
                         <a href="https://www.jmirs.org/article/S1939-8654(22)00296-X/fulltext" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
