--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                         
                         <p>Physics Undergraduation Course at Universidade Estadual de Londrina.</p>
 
-                        <a href="#" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
+                        <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                             <script>
