--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 
     <section class="section" id="blog">
         <div class="container">
-            <h2 class="mb-5">Published<span class="text-danger"> Articles</span></h2>
+            <h2 class="mb-5">Published<span class="text-danger"> Articles</span> and Certifications</h2>
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
