--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
             </div>
         </div>
     </div>
-
     <!--Resume Section-->
     <section class="section" id="resume">
         <div class="container">
@@ -319,7 +318,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Big Data</h5>
-                            <P class="subtitle">Big data refers to extremely large and complex datasets that exceed the capabilities of traditional data processing methods. It involves three main characteristics known as the three Vs: Volume (large data volume), Velocity (high data generation and processing speed), and Variety (diverse data types and sources). The goal of analyzing big data is to extract valuable insights, patterns, and trends that can inform decision-making, improve processes, and drive innovation. To handle big data effectively, organizations often use specialized technologies and tools, such as distributed computing, NoSQL databases, data lakes, and advanced analytics methods. The analysis of big data enables businesses and researchers to gain a deeper understanding of complex phenomena and make data-driven decisions for a competitive advantage.</P>
+                            <P class="subtitle">Big data refers to extremely large and complex datasets that exceed the capabilities of traditional data processing methods. It involves three main characteristics known as the three Vs: Volume (large data volume), Velocity (high data generation and processing speed), and Variety (diverse data types and sources). The goal of analyzing big data is to extract valuable insights, patterns, and trends that can inform decision-making, improve processes, and drive innovation. To handle big data effectively, organizations often use specialized technologies and tools, such as distributed computing, NoSQL databases, data lakes, and advanced analytics methods./P>
                         </div>
                     </div>
                 </div>
