--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                         
                         <p>Master's Degree in Biomedical Engineering.</p>
 
-                        <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
+                        <a href="http://www.utfpr.edu.br/cursos/coordenacoes/stricto-sensu/ppgeb" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
