--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Certification of a Master's Degree in Science.</b></p>
+                        <p><b>Diploma of a Master's Degree in Science.</b></p>
                         
                         <p>Master's Degree in Biomedical Engineering.</p>
 
