--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                 <a class="img-popup" href="assets/imgs/xgboost.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">XGBoost Model</h6>
-                                    <p class="subtitle">Python, Pandas, matplotlib, plotly</p>
+                                    <p class="subtitle">Python, Pandas, matplotlib and plotly</p>
                                 </div>
                             </div>
                         </div>                                                      
