--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                 <a class="img-popup" href="assets/imgs/web-scrap.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Web Scraping</h6>
-                                    <p class="subtitle">Scrapy, beautifulsoup, spider, Python</p>
+                                    <p class="subtitle">Python, Scrapy, Beautifulsoup and spider</p>
                                 </div>
                             </div>
                         </div>                                                      
