--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                                 <a class="img-popup" href="assets/imgs/social2.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Financial Database</h6>
-                                    <p class="subtitle">Google Sheets, Python, Excel</p>
+                                    <p class="subtitle">Google Sheets, Python and Excel</p>
                                 </div>
                             </div>
                         </div>                                                       
