--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/social2.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Financial Database</h6>
+                                    <h6 class="title">Data Warehouse</h6>
                                     <p class="subtitle">Google Sheets, Python and Excel</p>
                                 </div>
                             </div>
