--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/spleen.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Deep Learning</h6>
+                                    <h6 class="title">Deep Learning (DP)</h6>
                                     <p class="subtitle">UNET, matplotlib, Pytorch, Keras and Monai</p>
                                 </div>
                             </div>
