--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 
                         <p><b>Diploma of a Master's Degree in Science.</b></p>
                         
-                        <p>Master's Degree in Biomedical Engineering.</p>
+                        <p>Master's Degree in Biomedical Engineering was achieved at Universidade Tecnológica Federal do Paraná</p>
 
                         <a href="http://www.utfpr.edu.br/cursos/coordenacoes/stricto-sensu/ppgeb" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
