--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
                         <p><b>Certification of a Bachelor's Degree in Physics.</b></p>
                         
-                        <p>Physics Undergraduation Course at Universidade Estadual de Londrina.</p>
+                        <p>Bachelor's Degree in Physics was achieved at Universidade Estadual de Londrina.</p>
 
                         <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
                     </div>
