--- a/index.html
+++ b/index.html
@@ -447,6 +447,19 @@
                         </div>                                                   
                     </div>
                 </div> 
+                <div class="col-md-6 col-lg-4 mach">
+                    <div class="portfolio-item">
+                        <img src="assets/imgs/yolov8.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                        <div class="content-holder">
+                            <a class="img-popup" href="assets/imgs/yolov8.png"></a>
+                            <div class="text-holder">
+                                <h6 class="title">Computer Vision (DP)</h6>
+                                <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
+                            </div>
+                        </div>
+                    </div>                                                   
+                </div>
+                </div> 
             </div>  
         </div>            
     </section>
