--- a/index.html
+++ b/index.html
@@ -460,7 +460,31 @@
                     </div>                                                   
                 </div>
                 </div> 
-            </div>  
+                <div class="col-md-6 col-lg-4 mach">
+                    <div class="portfolio-item">
+                        <img src="assets/imgs/yolov8.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                        <div class="content-holder">
+                            <a class="img-popup" href="assets/imgs/yolov8.png"></a>
+                            <div class="text-holder">
+                                <h6 class="title">Computer Vision (DP)</h6>
+                                <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
+                            </div>
+                        </div>
+                    </div>                                                   
+                </div>
+            </div> 
+            <div class="col-md-6 col-lg-4 mach">
+                <div class="portfolio-item">
+                    <img src="assets/imgs/yolov8fish.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                    <div class="content-holder">
+                        <a class="img-popup" href="assets/imgs/yolov8fish.png"></a>
+                        <div class="text-holder">
+                            <h6 class="title">Computer Vision - Classifier</h6>
+                            <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
+                        </div>
+                    </div>
+                </div>                                                   
+            </div> 
         </div>            
     </section>
     <!-- End of portfolio section -->
