--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                         <div class="content-holder">
                             <a class="img-popup" href="assets/imgs/yolov8.png"></a>
                             <div class="text-holder">
-                                <h6 class="title">Computer Vision (DP)</h6>
+                                <h6 class="title">Computer Vision</h6>
                                 <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
                             </div>
                         </div>
@@ -479,7 +479,7 @@
                     <div class="content-holder">
                         <a class="img-popup" href="assets/imgs/yolov8fish.png"></a>
                         <div class="text-holder">
-                            <h6 class="title">Computer Vision - Classifier</h6>
+                            <h6 class="title">Classifier - Computer Vision</h6>
                             <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
                         </div>
                     </div>
