--- a/index.html
+++ b/index.html
@@ -361,6 +361,18 @@
                                 </div>
                             </div>
                         </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 mach">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/neweng.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/neweng.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Computer Vision (DP)</h6>
+                                    <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
+                                </div>
+                            </div>
+                        </div>                                                   
                     </div>                              
                     <div class="col-md-6 col-lg-4 science">
                         <div class="portfolio-item">
@@ -442,18 +454,6 @@
                                 <div class="text-holder">
                                     <h6 class="title">Deep Learning (DP)</h6>
                                     <p class="subtitle">UNET, matplotlib, Pytorch, Keras and Monai</p>
-                                </div>
-                            </div>
-                        </div>                                                   
-                    </div>
-                    <div class="col-md-6 col-lg-4 mach">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/yolov8.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/yolov8.png"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">Computer Vision (DP)</h6>
-                                    <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
                                 </div>
                             </div>
                         </div>                                                   
