--- a/index.html
+++ b/index.html
@@ -362,14 +362,14 @@
                             </div>
                         </div>                                                     
                     </div>
-                    <div class="col-md-6 col-lg-4 mach">
+                    <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/neweng.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/neweng.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Computer Vision (DP)</h6>
-                                    <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
+                                    <h6 class="title">Monte Carlo Simulation (MC)</h6>
+                                    <p class="subtitle">C++, Python, Slicer 3D and GATE </p>
                                 </div>
                             </div>
                         </div>                                                   
