--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <!-- Portfolio Section -->
     <section class="section bg-custom-gray" id="portfolio">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
+            <h1 class="mb-5"><span class="text-danger">My </span> Portfolio</h1>
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".eng" class="active">
@@ -332,7 +332,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/ibov.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Index Analysis</h6>
+                                    <h6 class="title">IBOV Analysis</h6>
                                     <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div> 
