--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dax.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">DATABASE</h6>
-                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
+                                    <h6 class="title">Data Warehouse</h6>
+                                    <p class="subtitle">Power BI, DAX, Python and Excel</p>
                                 </div>
                             </div>
                         </div>                                                     
