--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/yolov8fish.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Classifier - Computer Vision</h6>
+                                    <h6 class="title">Fish Classifier - Computer Vision</h6>
                                     <p class="subtitle">CNN, YOLOv8, Pytorch, Python and Roboflow</p>
                                 </div>
                             </div>
