--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                 <a class="img-popup" href="assets/imgs/powerbi.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Power BI</h6>
-                                    <p class="subtitle">Power BI, DAX, Python, Excel</p>
+                                    <p class="subtitle">Power BI, DAX, Python and Excel</p>
                                 </div>
                             </div>
                         </div>                                                       
