--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                                 <a class="img-popup" href="assets/imgs/social.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Financial Analysis</h6>
-                                    <p class="subtitle">Google Sheets, DAX, Python, Excel</p>
+                                    <p class="subtitle">Google Sheets, DAX, Python and Excel</p>
                                 </div>
                             </div>
                         </div>
