--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 <a class="img-popup" href="assets/imgs/retail_23.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Retail stocks Analysis</h6>
-                                    <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
+                                    <p class="subtitle">Pandas, ifinance, Seaborn and Matplotlib</p>
                                 </div>
                             </div> 
                         </div>                         
