--- a/index.html
+++ b/index.html
@@ -647,9 +647,9 @@
 
                         <p><b>Certification of a Bachelor's Degree in Physics.</b></p>
                         
-                        <p>Bachelor's Degree in Physics was achieved at Universidade Estadual de Londrina.</p>
+                        <p>Bachelor's Degree in Physics was achieved at Universidade Estadual de Londrina(UEL).</p>
 
-                        <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
+                        <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more<i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                             <script>
