--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <P class="subtitle">Develop and execute comprehensive testing strategies to ensure the quality and reliability of software applications and data-driven solutions. Develop and maintain test scripts and automated testing frameworks to streamline the testing process and enhance efficiency. Continuously monitor and evaluate the performance of software applications, identifying areas for enhancement and proposing data-driven solutions for optimization.</P>
                             <hr>
                             <h6 class="title text-danger">Sept 2021 - Aug 2021 </h6>
-                            <P><b>Machine Learning Engineer at Artificial Intelligence HUB</b></P>
+                            <P><b>Machine Learning Engineer/Scrum Master at Artificial Intelligence HUB</b></P>
                             <P class="subtitle">I was responsible for facilitating the effective implementation of the Scrum framework in software development projects. I have facilitated communication and collaboration between the development team and stakeholders, ensuring transparency and a shared understanding of project goals, progress, and challenges. Also, I was responsible for designing, coding, and testing software applications based on defined requirements. I have actively participated in the full software development life cycle, ensuring code quality, adherence to coding standards, and the use of best practices to deliver robust and scalable software.</P>
                         </div>
                     </div>
