--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <li><span>Birthdate</span> : 18/01/1991</li>
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
                     <li><span>Phone</span> : + (55) 21 998048038</li>
-                    <li><span>Linkedin</span> : linkedin.com/in/cristiangriebler/ </li>
+                    <li><span>Linkedin</span> : linkedin.com/in/cristiangriebler</li>
                     <li><span>Address</span> :  Rua Brigadeiro Franco 2691, Curitiba-PR Brazil.</li>
                 </ul>
                 <ul class="social-icons pt-3">
