--- a/index.html
+++ b/index.html
@@ -601,11 +601,11 @@
                         </p>
                         <p>Summary</p>
 
-                        <p><b>Diploma of a Master's Degree in Science.</b></p>
+                        <p><b>Potential difference evaluation of X-ray tube in conventional radiology and mammography equipment.</b></p>
                         
                         <p>Master's Degree in Biomedical Engineering was achieved at Universidade Tecnológica Federal do Paraná</p>
 
-                        <a href="http://www.utfpr.edu.br/cursos/coordenacoes/stricto-sensu/ppgeb" class="read-more">Read me more <i class="ti-angle-double-right"></i></a>
+                        <a href="http://repositorio.utfpr.edu.br/jspui/handle/1/24698" class="read-more">Link to UTFPR Repository <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
