--- a/index.html
+++ b/index.html
@@ -643,10 +643,9 @@
                             <a href="#"><i class="ti-share"></i> 2</a>
                             <a href="#"><i class="ti-download"></i> 1</a>
                         </p>
+                        <p><b>Certification of a Bachelor's Degree in Physics.</b></p>
                         <p>Summary</p>
 
-
-                        
                         <p>Bachelor's Degree in Physics was achieved at Universidade Estadual de Londrina(UEL).</p>
 
                         <a href="http://www.uel.br/cce/fisica/portal/" class="read-more">Read me more<i class="ti-angle-double-right"></i></a>
