--- a/index.html
+++ b/index.html
@@ -621,11 +621,9 @@
                             <a href="#"><i class="ti-share"></i> 2</a>
                             <a href="#"><i class="ti-download"></i> 1</a>
                         </p>
-                        
+                        <p><b>Graduated Course in Artificial Intelligence applied in Industry.</b></p>
                         <p>Summary</p>
 
-
-                        
                         <p>Certification of a Graduate Course in Artificial Intelligence applied in the industrial sector in HUB of Artificial Intelligence at Senai-Londrina.</p>
 
                         <a href="https://www.senaipr.org.br/tecnologiaeinovacao/nossarede/hubia/" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
