--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
                     <li><span>Phone</span> : + (55) 21 998048038</li>
                     <li><span>Linkedin</span> : linkedin.com/in/cristiangriebler</li>
-                    <li><span>Address</span> : Brazil.</li>
+                    <li><span>Address</span> : São Paulo Brazil.</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/cristiangriebler/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
