--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">Dec 2022 - Present </h6>
+                            <h6 class="title text-danger">Dec 2022 - Aug 2022</h6>
                             <P><b>Data Scientist at Well be Health Tech</b></P>
                             <P class="subtitle">Develop and implement ETL processes to extract, transform, and load healthcare data from diverse sources. Collaborate with software engineers to design and develop data-driven applications and platforms. Apply statistical analysis and machine learning techniques to derive insights from healthcare data. Ensure compliance with data privacy regulations and ethical considerations in handling sensitive healthcare data.</P>
                             <hr>
