--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <div class="card">
                        <div class="card-header">
                             <div class="pull-left">
-                                <h4 class="mt-2"> Skills </h4>
+                                <h4 class="mt-2"> Skills</h4>
                                 <span class="line"></span>  
                             </div>
                         </div>
@@ -307,7 +307,7 @@
                             <div class="content-holder">
                                 <a class="social-link" href="https://github.com/crisGriebler/stock_analysis/blob/main/oil_stocks.ipynb"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Oil and gas Industry Analysis</h6>
+                                    <h6 class="title">Oil and Gas Industry Analysis</h6>
                                     <p class="subtitle">Pandas, ifinance, seaborn and matplotlib</p>
                                 </div>
                             </div>   
