--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                 <a class="img-popup" href="assets/imgs/yolov8fish.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Fish Classifier - Computer Vision</h6>
-                                    <p class="subtitle">CNN, YOLOv8, Pytorch and Roboflow</p>
+                                    <p class="subtitle">Python, CNN, YOLOv8, Pytorch and Roboflow</p>
                                 </div>
                             </div>
                         </div>                                                   
