--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light"> Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5  class="mb-3">A Data Scientist / Data Engineer Located In Brazil</h5>
+                <h5  class="mb-3">A Data Scientist / Data Engineer Located in Brazil</h5>
                 <p class="mt-20" style="text-align:left;">I am a data scientist, driven by a passion for science, statistics, programming languages, and artificial intelligence.I have a curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
             </div>
             <div class="col-lg-4 about-card">
@@ -364,6 +364,18 @@
                     <div class="col-md-6 col-lg-4 eng">
                         <div class="portfolio-item">
                             <img src="assets/imgs/neweng.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/neweng.png"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Monte Carlo Simulation (MC)</h6>
+                                    <p class="subtitle">C++, Python, Slicer 3D and GATE </p>
+                                </div>
+                            </div>
+                        </div>                                                   
+                    </div>  
+                    <div class="col-md-6 col-lg-4 eng">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/4graficos.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/neweng.png"></a>
                                 <div class="text-holder">
