--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/neweng.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Monte Carlo Simulation (MC)</h6>
-                                    <p class="subtitle">C++, Python, Slicer 3D and GATE </p>
+                                    <h6 class="title">Data Visualization (MC)</h6>
+                                    <p class="subtitle">Python, Slicer 3D and matplotlib</p>
                                 </div>
                             </div>
                         </div>                                                   
