--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/4graficos.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">          
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/neweng.png"></a>
+                                <a class="img-popup" href="assets/imgs/4graficos.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">Data Visualization (MC)</h6>
+                                    <h6 class="title">Data Visualization</h6>
                                     <p class="subtitle">Python, Slicer 3D and matplotlib</p>
                                 </div>
                             </div>
