--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About</a>
+                        <a href="#about" class="nav-link">Ab</a>
                     </li>
                     <li class="nav-item">
                         <a href="#resume" class="nav-link">Resume</a>
