--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="#home" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">Ab</a>
+                        <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
                         <a href="#resume" class="nav-link">Resume</a>
@@ -79,7 +79,7 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
                     <li><span>Phone</span> : + (55) 21 998048038</li>
-                    <li><span>Linkedin</span> : linkedin.com/in/cristiangriebler </li>
+                    <li><span>Linkedin</span> <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/cristiangriebler/">: linkedin.com/in/cristiangriebler </i></a></li>
                     <li><span>Address</span> : São Paulo, SP - Brazil.</li>
                 </ul>
                 <ul class="social-icons pt-3">
