--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <ul class="mt40 info list-unstyled">
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
                     <li><span>Phone</span> : + (55) 21 998048038</li>
-                    <li><span>Linkedin : </span> <a href="https://www.linkedin.com/in/cristiangriebler/">: linkedin.com/in/cristiangriebler </a></li>
+                    <li><span>Linkedin :</span> <a href="https://www.linkedin.com/in/cristiangriebler/"> linkedin.com/in/cristiangriebler </a> </li>
                     <li><span>Address</span> : São Paulo, SP - Brazil.</li>
                     <a href="https://portal.uel.br/home/">Source: UEL - Universidade Estadual de Londrina </a>
                 </ul>
