--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2023 - Current</h6>
-                            <P><b>Data Scientist at Well be Health Tech</b></P>
+                            <P><b>Data Scientist at @Tech</b></P>
                             <P class="subtitle">new.</P>
                             <hr>
                             <h6 class="title text-danger">Dec 2022 - Aug 2023</h6>
