--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2023 - Current</h6>
                             <P><b>Data Scientist at @Tech</b></P>
-                            <P class="subtitle">new.</P>
+                            <P class="subtitle">FAPESP.</P>
                             <hr>
                             <h6 class="title text-danger">Dec 2022 - Aug 2023</h6>
                             <P><b>Data Scientist at Well be Health Tech</b></P>
