--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/crisGriebler"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
-                <h4 class="header-subtitle" >Hello, I am</h4>
+                <h4 class="header-subtitle" >Hi, I am</h4>
                 <h1 class="header-title">Cristian Griebler</h1>
                 <h6 class="header-mono" >Data Scientist | Data Engineer</h6>
             </div>
