--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p class="mt-20" style="text-align:left;">I am a data scientist, driven by a passion for science, statistics, programming languages, and artificial intelligence.I have a curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
             </div>
             <div class="col-lg-4 about-card">
-                <h3 class="font-weight-light">Personal Info</h3>
+                <h3 class="font-weight-light">Personal Information</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
