--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><span>Email</span> : cristiangrb@gmail.com</li>
-                    <li><span>Phone</span> : + (--) 21 998048038</li>
+                    <li><span>Phone</span> : + (55) 21 998048038</li>
                     <li><span>Linkedin :</span> <a href="https://www.linkedin.com/in/cristiangriebler/">linkedin.com/in/cristiangriebler </a> </li>
                     <li><span>Address</span> : São Paulo, SP - Brazil.</li>
                 </ul>
