--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Cristian Griebler</h1>
-                <h6 class="header-mono" >Data Scientist | Data Engineer</h6>
+                <h6 class="header-mono" > Data Engineer | Data Scientist </h6>
             </div>
         </div>
     </header>
@@ -70,8 +70,8 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light"> Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5  class="mb-3">A Data Scientist / Data Engineer Located in Brazil</h5>
-                <p class="mt-20" style="text-align:left;">I am a data scientist, driven by a passion for science, statistics, programming languages, and artificial intelligence.I have a curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
+                <h5  class="mb-3">A Data Engineer / Data Scientist  Located in Brazil</h5>
+                <p class="mt-20" style="text-align:justify;">I am a data engineer, driven by a passion for science, statistics, programming languages, and artificial intelligence.I have a curious mind and an analytical approach, I dive into complex datasets, unraveling hidden insights and unlocking the power of data. My proficiency in programming languages empowers you to develop innovative algorithms and models, revolutionizing the field of data science. My dedication to continuous learning keeps me at the forefront of technological advancements, fueling my love for exploring the frontiers of AI.</p>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Information</h3>
@@ -92,6 +92,15 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">My Expertise</h3>
                 <span class="line mb-5"></span>
+                <div class="row">
+					<div class="col-1 text-danger pt-1"><i class="ti-harddrives icon-lg"></i></div>
+                    <div class="col-10 ml-auto mr-3">
+                        <h6>Data Engineering</h6>
+                        <p class="subtitle"> 
+                            Data engineering is the discipline that focuses on designing, building, and maintaining the systems and architectures that enable data collection, storage, and analysis. It involves developing efficient ETL pipelines, ensuring data quality, and optimizing data flows across diverse platforms. Data engineers bridge the gap between raw data and actionable insights, providing the foundation upon which analytics and machine learning models operate.</p>
+                        <hr>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-vector icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
@@ -136,17 +145,17 @@
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2023 - Current</h6>
                             <P><b>Data Scientist at @Tech</b></P>
-                            <P class="subtitle">FAPESP.</P>
+                            <P class="subtitle">Design, build, and maintain scalable data pipelines using GCP tools such as BigQuery, Cloud Storage, Cloud Functions, Cloud Run, and Cloud Scheduler to automate ETL processes and integrate data from diverse sources. Collaborate with software engineers and data scientists to develop data-driven applications and analytical platforms. Implement data modeling, transformation, and orchestration workflows that ensure accuracy, performance, and reliability across production environments. Optimize data ingestion, storage, and query performance while enforcing best practices in data governance, security, and cost efficiency.</P>
                             <hr>
-                            <h6 class="title text-danger">Dec 2022 - Aug 2023</h6>
+                            <h6 class="title text-danger">Dec 2022 - Dec 2023</h6>
                             <P><b>Data Scientist at Well be Health Tech</b></P>
                             <P class="subtitle">Develop and implement ETL processes to extract, transform, and load healthcare data from diverse sources. Collaborate with software engineers to design and develop data-driven applications and platforms. Apply statistical analysis and machine learning techniques to derive insights from healthcare data. Ensure compliance with data privacy regulations and ethical considerations in handling sensitive healthcare data.</P>
                             <hr>
-                            <h6 class="title text-danger">Aug 2022 - Dec 2022 </h6>
+                            <h6 class="title text-danger">Oct 2021 - Dec 2022 </h6>
                             <P><b>Data Scientist at Penguin Technologies</b></P>
                             <P class="subtitle">Develop and execute comprehensive testing strategies to ensure the quality and reliability of software applications and data-driven solutions. Develop and maintain test scripts and automated testing frameworks to streamline the testing process and enhance efficiency. Continuously monitor and evaluate the performance of software applications, identifying areas for enhancement and proposing data-driven solutions for optimization.</P>
                             <hr>
-                            <h6 class="title text-danger">Sept 2021 - Aug 2021 </h6>
+                            <h6 class="title text-danger">Sept 2020 - Sept 2021 </h6>
                             <P><b>Machine Learning Engineer/Scrum Master at Artificial Intelligence HUB</b></P>
                             <P class="subtitle">I was responsible for facilitating the effective implementation of the Scrum framework in software development projects. I have facilitated communication and collaboration between the development team and stakeholders, ensuring transparency and a shared understanding of project goals, progress, and challenges. Also, I was responsible for designing, coding, and testing software applications based on defined requirements. I have actively participated in the full software development life cycle, ensuring code quality, adherence to coding standards, and the use of best practices to deliver robust and scalable software.</P>
                         </div>
@@ -166,7 +175,7 @@
                             <P class="subtitle">A PhD in Nuclear Physics with a project in nuclear medicine, specifically focused on the dosimetry of alpha particle emitters, entails in-depth research into the precise measurement and calculation of radiation doses delivered by alpha-emitting radionuclides for medical applications. This research plays a crucial role in optimizing therapeutic radiation treatments for cancer and other diseases, enhancing the effectiveness of targeted alpha-particle therapies while minimizing potential harm to healthy tissues. </P>
                             <hr>
                             <h6 class="title text-danger">2021 - 2022</h6>
-                            <P><b>Specialization in Artificial Intelligence and Machine Learning</b></P>
+                            <P><b>Graduated Course in Artificial Intelligence and Machine Learning</b></P>
                             <P class="subtitle">A graduate course with a focus on solving industrial sector problems equips students with specialized skills in applying AI and ML techniques to real-world industrial challenges. Through rigorous coursework and industry-specific case studies, students learn to develop innovative solutions that optimize manufacturing processes, enhance quality control, and drive operational efficiency.</P>
                             <hr>
                             <h6 class="title text-danger">2017 - 2019</h6>
@@ -257,7 +266,7 @@
                             <div class="m-auto"><i class="ti-layers-alt icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">3</h1>
+                            <h1 class="text-danger font-weight-bold font40">5</h1>
                             <p class="text-light mb-1">Years of Experience</p>
                         </div>
                     </div>
