--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
 					<div class="col-1 text-danger pt-1"><i class="ti-harddrives icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Engineering</h6>
-                        <p class="subtitle"> 
-                            Data engineering is the discipline that focuses on designing, building, and maintaining the systems and architectures that enable data collection, storage, and analysis. It involves developing efficient ETL pipelines, ensuring data quality, and optimizing data flows across diverse platforms. Data engineers bridge the gap between raw data and actionable insights, providing the foundation upon which analytics and machine learning models operate.</p>
                         <hr>
                     </div>
                 </div>
@@ -105,8 +103,6 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-vector icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Science</h6>
-                        <p class="subtitle"> 
-                            Data science is the interdisciplinary field that utilizes scientific methods, processes, algorithms, and systems to extract knowledge and insights from structured and unstructured data.</p>
                         <hr>
                     </div>
                 </div>
@@ -114,7 +110,6 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-bar-chart icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Analysis</h6>
-                        <p class="subtitle">Data analysis involves examining, cleaning, transforming, and interpreting data to uncover patterns, draw meaningful conclusions, and support decision-making processes.</p>
                         <hr>
                     </div>
                 </div>
@@ -122,7 +117,6 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Machine Learning</h6>
-                        <p class="subtitle">Machine learning is a field of artificial intelligence that focuses on developing algorithms and models capable of automatically learning and making predictions from data.</p>
                         <hr>
                     </div>
                 </div>
@@ -144,11 +138,11 @@
                         </div>
                         <div class="card-body">
                             <h6 class="title text-danger">Dec 2023 - Current</h6>
-                            <P><b>Data Scientist at @Tech</b></P>
+                            <P><b>Data Engineer at @Tech</b></P>
                             <P class="subtitle">Design, build, and maintain scalable data pipelines using GCP tools such as BigQuery, Cloud Storage, Cloud Functions, Cloud Run, and Cloud Scheduler to automate ETL processes and integrate data from diverse sources. Collaborate with software engineers and data scientists to develop data-driven applications and analytical platforms. Implement data modeling, transformation, and orchestration workflows that ensure accuracy, performance, and reliability across production environments. Optimize data ingestion, storage, and query performance while enforcing best practices in data governance, security, and cost efficiency.</P>
                             <hr>
                             <h6 class="title text-danger">Dec 2022 - Dec 2023</h6>
-                            <P><b>Data Scientist at Well be Health Tech</b></P>
+                            <P><b>Data Engineer at Well be Health Tech</b></P>
                             <P class="subtitle">Develop and implement ETL processes to extract, transform, and load healthcare data from diverse sources. Collaborate with software engineers to design and develop data-driven applications and platforms. Apply statistical analysis and machine learning techniques to derive insights from healthcare data. Ensure compliance with data privacy regulations and ethical considerations in handling sensitive healthcare data.</P>
                             <hr>
                             <h6 class="title text-danger">Oct 2021 - Dec 2022 </h6>
