--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/avatar.png" alt="" class="brand-img">
+                    <img src="assets/imgs/nexus.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Cristian Griebler</h5>
-                        <div class="brand-subtitle">Data Scientist | Data Engineer</div>
+                        <div class="brand-subtitle">Data Engineer | Data Scientist</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -583,10 +583,9 @@
         <div class="container">
             <h2 class="mb-5">Published<span class="text-danger"> Articles</span> and Certifications</h2>
             <div class="row">
-                <div class="blog-card">
-					<div class="blog-card">
+                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/luis.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/paperDoc.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Deep learning-based segmentation of Jaszczak ACR phantom images</h6>
@@ -596,9 +595,7 @@
                             <a href="#"><i class="ti-share"></i> 20</a>
                             <a href="#"><i class="ti-download"></i> 10</a>
                         </p>
-                        
-
-                        <p><b>Abstract</b></p>
+						<p><b>Abstract</b></p>
                         <p>Precise and personalized absorbed dose estimation in radionuclide therapy is crucial for optimizing treatment efficiency while minimizing harm to healthy tissues. Radium-223 dichloride (Ra-223), an alpha emitter used in treating metastatic castration-resistant prostate cancer, has shown positive results in extending patient survival.This work introduces an innovative approach that integrates a deep learning-based model for automated segmentation of the Jaszczak ACR phantom—a tool for image quality analysis in nuclear medicine—with Monte Carlo simulation for dosimetry. The model exhibits efficient segmentation, surpassing 83.7 % in class-wise Dice coefficients, offering a timeefficient alternative to manual segmentation</p>
 
                         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0969806X25005201?dgcid=author" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
