--- a/index.html
+++ b/index.html
@@ -601,7 +601,8 @@
                         <a href="https://www.sciencedirect.com/science/article/abs/pii/S0969806X25005201?dgcid=author" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
-                <!-- blog-card -->					
+                <!-- blog-card -->
+				<div class="blog-card">
                     <div class="img-holder">
                         <img src="assets/imgs/luis.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
@@ -614,7 +615,6 @@
                             <a href="#"><i class="ti-download"></i> 10</a>
                         </p>
                         
-
                         <p><b>Abstract</b></p>
                         <p>223Radium dichloride image-based individual dosimetry requires an optimal acquisition and reconstruction protocol and proper image correction methods for theranostic applications. To assess this problem, radium-223 dichloride SPECT images were acquired from a Jaszczak simulator with a dual-headed gamma camera, LEHR collimator, 128 × 128 matrix, and total time of 32 minutes. A cylindrical PMMA phantom was used to calibrate the measurements performed with Jaszczak. The image quality parameters (noise coefficient, contrast, contrast-to-noise ratio and recovery coefficient) and septal penetration correction were calculated by MATLAB®. The best results for the investigated image quality parameters were obtained with an 89 keV energy window (24% wide) produced together with OSEM/MLEM reconstruction (8 subsets and 4 iterations) applying a Butterworth filter (order 10 and cutoff frequency of 0.48 cycles·cm−1).</p>
 
@@ -639,8 +639,6 @@
                         <p><b>Abstract</b></p>
                         <p>The evaluation of the potential difference of X-ray equipment is a fundamental item in the quality control program of a radiodiagnosis clinic. This evaluation is important to ensure the patient’s radiological protection and to guarantee the quality of the exam image. The image quality is responsible for the correct diagnosis of the exam. National standards, Portaria 453/98 and the recent RDC 330/19, establish different operating limits for the voltage produced by the equipment’s X-ray tube and do not present a clear definition for the term voltage. The objective of this work was to evaluate the performance of three X-ray equipments and three mammographic equipments through the tests of accuracy and reproducibility established in the national standard.</p>
                         
-
-
                         <a href="http://repositorio.utfpr.edu.br/jspui/handle/1/24698" class="read-more">Link to UTFPR Repository <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
