--- a/index.html
+++ b/index.html
@@ -699,6 +699,16 @@
                               // Change the slide every 3 seconds (adjust the time as needed)
                               setInterval(showNextSlide, 3000);
                             </script>
+							<!-- ✅ Add this new script block -->
+							<script>
+  							// Automatically show "Data Engineering" projects on page load
+  								document.addEventListener("DOMContentLoaded", function() {
+    								const defaultFilter = document.querySelector('.filters a[data-filter=".eng"]');
+    								if (defaultFilter) {
+      									defaultFilter.click(); // Simulate a click on the Data Engineering filter
+    								}
+  									});
+							</script>
                         </body>             
                 </div><!-- end of blog wrapper -->
             </div>
